First release version

--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
                 <!-- Название компании -->
                 <div class="name-company col-4">
                     <span class="name-company_name">
-                        Производственно-строительная компания ТермоБетон <br>
-                    </span>
-                    <span class="name-company_description">
-                        официальный сайт <br>
-                        Строительная компания г. Касимов
+                        Производственно-строительная компания <br>
                     </span>
                 </div>
                 <!-- Телефоны компании -->
@@ -77,9 +73,7 @@
                             </a>
                         </div>
                         <a href="#" class="addr"><i class="fa ti-email i-map" aria-hidden="true"></i></a>
-
                         <div class="addr-company_text_second ">
-
                             <a href="#" class="addr"> termobeton@mail.ru
                             </a>
                         </div>
@@ -102,36 +96,17 @@
                                 <span class="navbar-toggler-icon"></span>
                             </button>
                             <!-- Список меню -->
-                            <div class="collapse navbar-collapse offset-lg-0 offset-xl-1 offset-0" id="navbarSupportedContent">
+                            <div class="collapse navbar-collapse offset-lg-0 offset-xl-0 offset-0"
+                                id="navbarSupportedContent">
                                 <ul class="navbar-nav menu me-auto mb-2 mb-lg-0">
                                     <li class="nav-item checked-item">
                                         <a class="nav-link disabled " aria-current="page" href="#">Главная</a>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                            data-bs-toggle="dropdown" aria-expanded="false">
-                                            Услуги
-                                        </a>
-                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <li><a class="dropdown-item" href="JBconstructions.html">ЖБ конструкции</a>
-                                            </li>
-                                            <li><a class="dropdown-item"
-                                                    href="metakconstructions.html">Металлоконструкции</a></li>
-                                            <li><a class="dropdown-item" href="otdelochnieRaboty.html">Отделочные
-                                                    работы</a></li>
-                                        </ul>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="production.html">Продукция</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="calculator.html">Калькулятор</a>
-                                    </li>
-                                    <li class="nav-item">
                                         <a class="nav-link" href="price-list.html">Прайс-лист</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="portfolio.html">Портфолио</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contacts.html">Контакты</a>
@@ -157,7 +132,8 @@
                         <div class="black">
                             <p class="str-block-slr ">Строительнство из полистеролбетона </p>
                             <!-- Переход в процукцию -->
-                            <button class="btn-known" onclick="window.location.href = 'production.html'">Узнать подробности</button>
+                            <button class="btn-known" onclick="window.location.href = 'production.html'">Узнать
+                                подробности</button>
                         </div>
                     </div>
                     <!-- Второй слайдер -->
@@ -166,7 +142,8 @@
                         <div class="black">
                             <p class="str-block-slr ">Просто, недорого и надёжно</p>
                             <!-- Переход в процукцию -->
-                            <button class="btn-known" onclick="window.location.href = 'price-list.html'">Узнать подробности</button>
+                            <button class="btn-known" onclick="window.location.href = 'price-list.html'">Узнать
+                                подробности</button>
                         </div>
                     </div>
                     <!-- Третий слайдер -->
@@ -175,7 +152,8 @@
                         <div class="black">
                             <p class="str-block-slr ">Больше о полистеролбетоне</p>
                             <!-- Переход в процукцию -->
-                            <button class="btn-known" onclick="window.location.href = 'production.html'">Узнать подробности</button>
+                            <button class="btn-known" onclick="window.location.href = 'production.html'">Узнать
+                                подробности</button>
                         </div>
                     </div>
                     <!-- Четвёртый слайдер -->
@@ -674,13 +652,8 @@
                     <ul class="navigation-menu">
                         <li class="main-footer-item"><span class="checked text-decoration-line-through">Главная</span>
                         </li>
-                        <li class="main-footer-item"><a href="JBconstructions.html">ЖБ конструкции</a></li>
-                        <li class="main-footer-item"><a href="metakconstructions.html">Металлоконструкций</a></li>
-                        <li class="main-footer-item"><a href="otdelochnieRaboty.html">Отделочные работы</a></li>
                         <li class="ourMaterial-footer-item"><a href="production.html">Продукция</a></li>
                         <li class="main-footer-item"><a href="price-list.html">Прайс-лист</a></li>
-                        <li class="calculator-footer-item"><a href="calculator.html">Калькулятор</a></li>
-                        <li class="contacts-portfolio-item"><a href="portfolio.html">Порфолио</a></li>
                         <li class="contacts-footer-item"><a href="contacts.html">Контакты</a></li>
                     </ul>
                 </div>
