--- a/production.html
+++ b/production.html
@@ -104,31 +104,11 @@
                                     <li class="nav-item checked-item">
                                         <a class="nav-link  " aria-current="page" href="index.html">Главная</a>
                                     </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                            data-bs-toggle="dropdown" aria-expanded="false">
-                                            Услуги
-                                        </a>
-                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <li><a class="dropdown-item" href="JBconstructions.html">ЖБ конструкции</a>
-                                            </li>
-                                            <li><a class="dropdown-item"
-                                                    href="metakconstructions.html">Металлоконструкции</a></li>
-                                            <li><a class="dropdown-item" href="otdelochnieRaboty.html">Отделочные
-                                                    работы</a></li>
-                                        </ul>
-                                    </li>
                                     <li class="nav-item">
                                         <a class="nav-link disabled" href="#">Продукция</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="calculator.html">Калькулятор</a>
-                                    </li>
-                                    <li class="nav-item">
                                         <a class="nav-link" href="price-list.html">Прайс-лист</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="portfolio.html">Портфолио</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contacts.html">Контакты</a>
@@ -753,15 +733,10 @@
                 <div class="navigation-footer-block  col-lg-2 col-md-2">
                     <p class="navigation-footer-item">Навигация</p>
                     <ul class="navigation-menu">
-                        <li class="main-footer-item"><span class="checked text-decoration-line-through">Главная</span>
+                        <li class="main-footer-item"><span>Главная</span>
                         </li>
-                        <li class="main-footer-item"><a href="JBconstructions.html">ЖБ конструкции</a></li>
-                        <li class="main-footer-item"><a href="metakconstructions.html">Металлоконструкций</a></li>
-                        <li class="main-footer-item"><a href="otdelochnieRaboty.html">Отделочные работы</a></li>
-                        <li class="ourMaterial-footer-item"><a href="production.html">Продукция</a></li>
+                        <li class="ourMaterial-footer-item"><a href="production.html" class="checked text-decoration-line-through">Продукция</a></li>
                         <li class="main-footer-item"><a href="price-list.html">Прайс-лист</a></li>
-                        <li class="calculator-footer-item"><a href="calculator.html">Калькулятор</a></li>
-                        <li class="contacts-portfolio-item"><a href="portfolio.html">Порфолио</a></li>
                         <li class="contacts-footer-item"><a href="contacts.html">Контакты</a></li>
                     </ul>
                 </div>
