--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <!-- Обнуление стилей -->
     <link rel="stylesheet" href="assets/css/reset.css">
     <!-- Иконочные шрифты -->
-    <link rel="stylesheet" href="assets/css/themify-icons.css">
+    <!-- <link rel="stylesheet" href="assets/css/themify-icons.css"> -->
     <!-- Библиотека иконочных шрифтов -->
-    <link rel="stylesheet" href="assets/css/lib-fonts.css">
+    <!-- <link rel="stylesheet" href="assets/css/lib-fonts.css"> -->
     <!-- Анимации -->
     <link rel="stylesheet" href="assets/css/animate.css">
     <!-- Слайдер для блока "Слайдер"-->
@@ -104,6 +104,9 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="production.html">Продукция</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link " href="application.html">Применение</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="price-list.html">Прайс-лист</a>
