--- a/client/index.html
+++ b/client/index.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Send mail</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous">
-    </head>
-    <body>
-
-        <div class="container">
-            <div class="row d-flex flex-wrap justify-content-center">
-                <h1 class="my-3">Send on mail</h1>
-                <form onsubmit="sendForm(event)" id="sendForm" class="col-8  d-flex flex-wrap justify-content-center">
-                    <input type="text" class="mx-auto my-3 col-5" placeholder="Name" id="name">
-                    <input type="text" class="mx-auto my-3 col-5" placeholder="Short massege" id="shortMessage">
-                    <input type="submit" value="Send mail" class="mx-5 my-3 col-4 border border-dark btn-primary">
-                </form>
-            </div>
-        </div>
-
-            
-            <!-- frontend api -->
-            <script src="frontend-api.js"></script>
-            <!-- Скрипт с frontend -->
-            <script src="frontend.js"></script>
-        </body>
-    </html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/logoCompany.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Сайт компании ООО 'Термобетон'"/><link rel="apple-touch-icon" href="/logoCompany.png"/><link rel="manifest" href="/manifest.json"/><title>Термобетон</title><script defer="defer" src="/static/js/main.27d76b3b.js"></script><link href="/static/css/main.43d84fac.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
